--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,44 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+  xmlns:tools="http://schemas.android.com/tools">
 
-    <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.APPClassFinalProject"
-        tools:targetApi="31">
-        <activity
-            android:name=".GanttActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EditIssueActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ProjectActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CreateIssueActivity"
-            android:exported="false" />
-        <activity
-            android:name=".HomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+    android:allowBackup="true"
+    android:dataExtractionRules="@xml/data_extraction_rules"
+    android:fullBackupContent="@xml/backup_rules"
+    android:icon="@mipmap/ic_launcher"
+    android:label="@string/app_name"
+    android:roundIcon="@mipmap/ic_launcher_round"
+    android:supportsRtl="true"
+    android:theme="@style/Theme.APPClassFinalProject"
+    tools:targetApi="31">
+    <activity
+      android:exported="false"
+      android:name=".userfriend" />
+    <activity
+      android:exported="false"
+      android:name=".GanttActivity" />
+    <activity
+      android:exported="false"
+      android:name=".EditIssueActivity" />
+    <activity
+      android:exported="false"
+      android:name=".ProjectActivity" />
+    <activity
+      android:exported="false"
+      android:name=".CreateIssueActivity" />
+    <activity
+      android:exported="false"
+      android:name=".HomeActivity" />
+    <activity
+      android:exported="false"
+      android:name=".RegisterActivity" />
+    <activity
+      android:exported="true"
+      android:name=".LoginActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+  </application>
 
 </manifest>
